Updated so that qoutes are in html markup

--- a/src/SFA.DAS.AssessorService.Web/Views/Account/RequestSent.cshtml
+++ b/src/SFA.DAS.AssessorService.Web/Views/Account/RequestSent.cshtml
@@ -11,7 +11,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-xl">Request submitted</h1>
             
-            <p class="govuk-body">Your request to access "@Model" has been submitted to your organisation’s administrator. </p>
+            <p class="govuk-body">Your request to access <q>@Model</q> has been submitted to your organisation’s administrator. </p>
             
         </div>
     </div>
